THRIFT-5134: Fix memory leak when the handler method return FALSE Client: c_glib Patch: wangyunjian

Signed-off-by: wangyunjian <wangyunjian@huawei.com>